--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -48,7 +48,7 @@
 
 <script>
     const feed = document.getElementById('feed');
-    const eventSource = new EventSource('http://localhost:9090/trades/stream');
+    const eventSource = new EventSource('/trades/stream');
     const shutdownBtn = document.getElementById('shutdownBtn');
 
     shutdownBtn.addEventListener('click', () => {
@@ -56,7 +56,7 @@
         shutdownBtn.textContent = 'Shutting down...';
         shutdownBtn.disabled = true;
 
-        fetch('http://localhost:9090/shutdown', {
+        fetch('/shutdown', {
             method: 'POST'
         })
         .then(response => response.text())
